// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  className="Flex__FlexWrapper-sc-7b3s7m-0 fcSrfy Layout__WrapperOuter-sc-19tlhp4-0 JiNzU"
  height={null}
  id={null}
  overflow={null}
  width={null}
>
  <div
    className="Flex__FlexWrapper-sc-7b3s7m-0 eDIgOT Layout__Header-sc-19tlhp4-1 hCkpGY"
    height={null}
    id="Header"
    overflow={null}
    width={null}
  >
    <div
      className="Bar__BarLayout-icfo76-2 izXrkl"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fNcQEg"
      >
        <a
          className="Command__CommandContainer-sc-13akgtp-0 kDINXo"
          id={null}
          label="LightBox"
          onClick={null}
          title="LightBox"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 klyodX Command__CommandName-sc-13akgtp-1 euPYCY"
            cursor="pointer"
            fontSize="0.875rem"
            fontWeight={400}
            htmlFor={null}
            letterSpacing=".5px"
          >
            LightBox
          </label>
        </a>
      </div>
      <div
        className="Bar__Slot-icfo76-1 ecRRXN"
      >
        <div
          className="IconBlock__Block-nokc92-0 UCGVw"
          id={null}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-calendar-alt fa-w-14 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
            color={null}
            data-icon="calendar-alt"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M148 288h-40c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12zm108-12v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 96v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm192 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96-260v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V112c0-26.5 21.5-48 48-48h48V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h128V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h48c26.5 0 48 21.5 48 48zm-48 346V160H48v298c0 3.3 2.7 6 6 6h340c3.3 0 6-2.7 6-6z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-bell fa-w-14 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
            color={null}
            data-icon="bell"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M439.39 362.29c-19.32-20.76-55.47-51.99-55.47-154.29 0-77.7-54.48-139.9-127.94-155.16V32c0-17.67-14.32-32-31.98-32s-31.98 14.33-31.98 32v20.84C118.56 68.1 64.08 130.3 64.08 208c0 102.3-36.15 133.53-55.47 154.29-6 6.45-8.66 14.16-8.61 21.71.11 16.4 12.98 32 32.1 32h383.8c19.12 0 32-15.6 32.1-32 .05-7.55-2.61-15.27-8.61-21.71zM67.53 368c21.22-27.97 44.42-74.33 44.53-159.42 0-.2-.06-.38-.06-.58 0-61.86 50.14-112 112-112s112 50.14 112 112c0 .2-.06.38-.06.58.11 85.1 23.31 131.46 44.53 159.42H67.53zM224 512c35.32 0 63.97-28.65 63.97-64H160.03c0 35.35 28.65 64 63.97 64z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <div
            className="Avatar__TagContainer-sc-1vuf9om-2 hPvQeZ"
            id={null}
            onClick={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 iOVbHb Avatar__AvatarText-sc-1vuf9om-0 gPtIFR"
              fontSize="1rem"
              fontWeight={500}
              id={null}
              letterSpacing="0.5px"
            >
              LG
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="Flex__FlexWrapper-sc-7b3s7m-0 fcSrfy Layout__Body-sc-19tlhp4-3 iPUXIc"
    height={null}
    id={null}
    overflow={null}
    width={null}
  >
    <div
      className="Flex__FlexWrapper-sc-7b3s7m-0 dmnuqw Layout__RegionLeft-sc-19tlhp4-4 kLquVr"
      height={null}
      id="Left"
      overflow={null}
      width="10rem"
    >
      <ul
        className="List__ListWrapper-sc-43f2zq-0 jUoCfC"
        id={null}
      >
        <li
          className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
          disabled={false}
          href={null}
          id={null}
          onClick={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                fontSize="1rem"
                fontWeight={400}
                id={null}
                letterSpacing="0.5px"
              >
                &lt; Jobs
              </p>
            </div>
          </div>
        </li>
        <li
          className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
          disabled={false}
          href={null}
          id={null}
          onClick={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                fontSize="1rem"
                fontWeight={400}
                id={null}
                letterSpacing="0.5px"
              >
                Job Details
              </p>
            </div>
          </div>
        </li>
        <li
          className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
          disabled={false}
          href={null}
          id={null}
          onClick={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                fontSize="1rem"
                fontWeight={400}
                id={null}
                letterSpacing="0.5px"
              >
                Site Verification
              </p>
            </div>
          </div>
        </li>
        <li
          className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
          disabled={false}
          href={null}
          id={null}
          onClick={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                fontSize="1rem"
                fontWeight={400}
                id={null}
                letterSpacing="0.5px"
              >
                Data Checklist
              </p>
            </div>
          </div>
        </li>
        <li
          className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
          disabled={false}
          href={null}
          id={null}
          onClick={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                fontSize="1rem"
                fontWeight={400}
                id={null}
                letterSpacing="0.5px"
              >
                Schedule Visit
              </p>
            </div>
          </div>
        </li>
        <li
          className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
          disabled={false}
          href={null}
          id={null}
          onClick={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                fontSize="1rem"
                fontWeight={400}
                id={null}
                letterSpacing="0.5px"
              >
                Report
              </p>
            </div>
          </div>
        </li>
        <li
          className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
          disabled={false}
          href={null}
          id={null}
          onClick={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                fontSize="1rem"
                fontWeight={400}
                id={null}
                letterSpacing="0.5px"
              >
                ReviewSend
              </p>
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      className="Flex__FlexWrapper-sc-7b3s7m-0 dAojLi Layout__WrapperMain-sc-19tlhp4-5 hRxOjc"
      height="20rem"
      id={null}
      overflow={null}
      width="calc(calc(100% - 10rem) - 24rem)"
    >
      <div
        className="Flex__FlexWrapper-sc-7b3s7m-0 brOArO Layout__RegionCenter-sc-19tlhp4-6 jQKfmR"
        height={null}
        id="Main"
        overflow={null}
        width={null}
      >
        <div
          className="Panel__PanelWrapper-sc-48epke-0 bdKrFx"
          height="100%"
          id={null}
          width="100%"
        >
          <section
            className="Panel__SectionWrapper-sc-48epke-1 irgvti Panel__PanelSection-sc-48epke-2 BZwGc"
            id={null}
          >
            <div
              className="Bar__BarLayout-icfo76-2 eIFIfS"
              id="storyshots_137"
              onClick={null}
            >
              <div
                className="Bar__Slot-icfo76-1 fNcQEg"
              >
                <h5
                  className="Typography__TitleText-sc-19auepv-2 dTLbTf"
                  fontSize="1.15rem"
                  fontWeight="500"
                  letterSpacing="0.4px"
                >
                  Site Verification
                </h5>
              </div>
            </div>
          </section>
          <section
            className="Panel__SectionWrapper-sc-48epke-1 kMucXq"
            id={null}
          />
        </div>
      </div>
    </div>
    <div
      className="Flex__FlexWrapper-sc-7b3s7m-0 jYTfur Layout__RegionRight-sc-19tlhp4-8 fkttIO"
      height={null}
      id="Right"
      overflow={null}
      width="24rem"
    >
      <div
        className="Panel__PanelWrapper-sc-48epke-0 bdKrFx"
        height="100%"
        id={null}
        width="100%"
      >
        <section
          className="Panel__SectionWrapper-sc-48epke-1 irgvti"
          id={null}
        >
          <section
            className="Tabs__TabsWrapper-sc-1aqycph-1 dkpJcd"
            disabled={false}
            id={null}
          >
            <button
              className="Button__StyledButton-sc-1v7sls2-0 ljVVQ Tabs__TabButton-sc-1aqycph-0 jkuVpT"
              disabled={false}
              htmlFor={null}
              id={null}
              name={null}
              onClick={null}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 fcbZyx"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 ePEGIf"
                  cursor="pointer"
                  fontSize="1rem"
                  fontWeight={400}
                  htmlFor={null}
                  letterSpacing=".5px"
                >
                  Parcels in Site
                </label>
              </section>
            </button>
            <button
              className="Button__StyledButton-sc-1v7sls2-0 bILKca Tabs__TabButton-sc-1aqycph-0 kUuvAb"
              disabled={false}
              htmlFor={null}
              id={null}
              name={null}
              onClick={null}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 fcbZyx"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 ePEGIf"
                  cursor="pointer"
                  fontSize="1rem"
                  fontWeight={400}
                  htmlFor={null}
                  letterSpacing=".5px"
                >
                  Measurements
                </label>
              </section>
            </button>
          </section>
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 hDFGtQ Card__CardGridWrapper-sc-1g3s676-4 cvDlTr"
            id={null}
            rows={null}
          >
            <div
              className="CardWrapper__StyledCardWrapper-meln7c-0 effjcg Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
              href={null}
              id="storyshots_138"
              media=""
              onClick={[Function]}
            >
              <section
                className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
                id="storyshots_138-Body"
                onClick={null}
              >
                <p
                  className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                  fontSize="1rem"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0.5px"
                >
                  <section
                    className="Grid__GridWrapper-sc-1ntp7gx-0 kTWmUL"
                    id={null}
                    rows={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 iUBZwE"
                      fontSize="1rem"
                      fontWeight={600}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      Lollipop Factory
                    </p>
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      145 Lollipop Way, Lollipop LA 34209
                    </p>
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      APN # 1239832947
                    </p>
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      Owner Name
                    </p>
                  </section>
                </p>
              </section>
              <section
                className="Card__CardSectionWrapper-sc-1g3s676-1 idnFTw"
                id="storyshots_138-Footer"
                onClick={null}
              >
                <div
                  className="Bar__BarLayout-icfo76-2 bHddGh"
                  id={null}
                  onClick={null}
                >
                  <div
                    className="Bar__Slot-icfo76-1 fNcQEg"
                  >
                    <a
                      className="Command__CommandContainer-sc-13akgtp-0 kDINXo"
                      id={null}
                      label="View Details"
                      onClick={null}
                      title="View Details"
                    >
                      <label
                        className="Typography__StyledLabel-sc-19auepv-0 klyodX Command__CommandName-sc-13akgtp-1 euPYCY"
                        cursor="pointer"
                        fontSize="0.875rem"
                        fontWeight={400}
                        htmlFor={null}
                        letterSpacing=".5px"
                      >
                        View Details
                      </label>
                    </a>
                  </div>
                </div>
              </section>
            </div>
            <div
              className="CardWrapper__StyledCardWrapper-meln7c-0 effjcg Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
              href={null}
              id="storyshots_139"
              media=""
              onClick={[Function]}
            >
              <section
                className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
                id="storyshots_139-Body"
                onClick={null}
              >
                <p
                  className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                  fontSize="1rem"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0.5px"
                >
                  <section
                    className="Grid__GridWrapper-sc-1ntp7gx-0 kTWmUL"
                    id={null}
                    rows={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 iUBZwE"
                      fontSize="1rem"
                      fontWeight={600}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      Lollipop Factory
                    </p>
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      145 Lollipop Way, Lollipop LA 34209
                    </p>
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      APN # 1239832947
                    </p>
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      Owner Name
                    </p>
                  </section>
                </p>
              </section>
              <section
                className="Card__CardSectionWrapper-sc-1g3s676-1 idnFTw"
                id="storyshots_139-Footer"
                onClick={null}
              >
                <div
                  className="Bar__BarLayout-icfo76-2 bHddGh"
                  id={null}
                  onClick={null}
                >
                  <div
                    className="Bar__Slot-icfo76-1 fNcQEg"
                  >
                    <a
                      className="Command__CommandContainer-sc-13akgtp-0 kDINXo"
                      id={null}
                      label="View Details"
                      onClick={null}
                      title="View Details"
                    >
                      <label
                        className="Typography__StyledLabel-sc-19auepv-0 klyodX Command__CommandName-sc-13akgtp-1 euPYCY"
                        cursor="pointer"
                        fontSize="0.875rem"
                        fontWeight={400}
                        htmlFor={null}
                        letterSpacing=".5px"
                      >
                        View Details
                      </label>
                    </a>
                  </div>
                </div>
              </section>
            </div>
            <div
              className="CardWrapper__StyledCardWrapper-meln7c-0 effjcg Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
              href={null}
              id="storyshots_140"
              media=""
              onClick={[Function]}
            >
              <section
                className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
                id="storyshots_140-Body"
                onClick={null}
              >
                <p
                  className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                  fontSize="1rem"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0.5px"
                >
                  <section
                    className="Grid__GridWrapper-sc-1ntp7gx-0 kTWmUL"
                    id={null}
                    rows={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 iUBZwE"
                      fontSize="1rem"
                      fontWeight={600}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      Lollipop Factory
                    </p>
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      145 Lollipop Way, Lollipop LA 34209
                    </p>
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      APN # 1239832947
                    </p>
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      Owner Name
                    </p>
                  </section>
                </p>
              </section>
              <section
                className="Card__CardSectionWrapper-sc-1g3s676-1 idnFTw"
                id="storyshots_140-Footer"
                onClick={null}
              >
                <div
                  className="Bar__BarLayout-icfo76-2 bHddGh"
                  id={null}
                  onClick={null}
                >
                  <div
                    className="Bar__Slot-icfo76-1 fNcQEg"
                  >
                    <a
                      className="Command__CommandContainer-sc-13akgtp-0 kDINXo"
                      id={null}
                      label="View Details"
                      onClick={null}
                      title="View Details"
                    >
                      <label
                        className="Typography__StyledLabel-sc-19auepv-0 klyodX Command__CommandName-sc-13akgtp-1 euPYCY"
                        cursor="pointer"
                        fontSize="0.875rem"
                        fontWeight={400}
                        htmlFor={null}
                        letterSpacing=".5px"
                      >
                        View Details
                      </label>
                    </a>
                  </div>
                </div>
              </section>
            </div>
            <div
              className="CardWrapper__StyledCardWrapper-meln7c-0 effjcg Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
              href={null}
              id="storyshots_141"
              media=""
              onClick={[Function]}
            >
              <section
                className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
                id="storyshots_141-Body"
                onClick={null}
              >
                <p
                  className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                  fontSize="1rem"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0.5px"
                >
                  <section
                    className="Grid__GridWrapper-sc-1ntp7gx-0 kTWmUL"
                    id={null}
                    rows={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 iUBZwE"
                      fontSize="1rem"
                      fontWeight={600}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      Lollipop Factory
                    </p>
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      145 Lollipop Way, Lollipop LA 34209
                    </p>
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      APN # 1239832947
                    </p>
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      Owner Name
                    </p>
                  </section>
                </p>
              </section>
              <section
                className="Card__CardSectionWrapper-sc-1g3s676-1 idnFTw"
                id="storyshots_141-Footer"
                onClick={null}
              >
                <div
                  className="Bar__BarLayout-icfo76-2 bHddGh"
                  id={null}
                  onClick={null}
                >
                  <div
                    className="Bar__Slot-icfo76-1 fNcQEg"
                  >
                    <a
                      className="Command__CommandContainer-sc-13akgtp-0 kDINXo"
                      id={null}
                      label="View Details"
                      onClick={null}
                      title="View Details"
                    >
                      <label
                        className="Typography__StyledLabel-sc-19auepv-0 klyodX Command__CommandName-sc-13akgtp-1 euPYCY"
                        cursor="pointer"
                        fontSize="0.875rem"
                        fontWeight={400}
                        htmlFor={null}
                        letterSpacing=".5px"
                      >
                        View Details
                      </label>
                    </a>
                  </div>
                </div>
              </section>
            </div>
          </section>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[` 2`] = `
<div
  className="Flex__FlexWrapper-sc-7b3s7m-0 fcSrfy Layout__WrapperOuter-sc-19tlhp4-0 JiNzU"
  height={null}
  id={null}
  overflow={null}
  width={null}
>
  <div
    className="Flex__FlexWrapper-sc-7b3s7m-0 eDIgOT Layout__Header-sc-19tlhp4-1 hCkpGY"
    height={null}
    id="Header"
    overflow={null}
    width={null}
  >
    <div
      className="Bar__BarLayout-icfo76-2 izXrkl"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fNcQEg"
      >
        <a
          className="Command__CommandContainer-sc-13akgtp-0 kDINXo"
          id={null}
          label="LightBox"
          onClick={null}
          title="LightBox"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 klyodX Command__CommandName-sc-13akgtp-1 euPYCY"
            cursor="pointer"
            fontSize="0.875rem"
            fontWeight={400}
            htmlFor={null}
            letterSpacing=".5px"
          >
            LightBox
          </label>
        </a>
      </div>
      <div
        className="Bar__Slot-icfo76-1 ecRRXN"
      >
        <div
          className="IconBlock__Block-nokc92-0 UCGVw"
          id={null}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-calendar-alt fa-w-14 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
            color={null}
            data-icon="calendar-alt"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M148 288h-40c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12zm108-12v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 96v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm192 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96-260v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V112c0-26.5 21.5-48 48-48h48V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h128V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h48c26.5 0 48 21.5 48 48zm-48 346V160H48v298c0 3.3 2.7 6 6 6h340c3.3 0 6-2.7 6-6z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-bell fa-w-14 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
            color={null}
            data-icon="bell"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M439.39 362.29c-19.32-20.76-55.47-51.99-55.47-154.29 0-77.7-54.48-139.9-127.94-155.16V32c0-17.67-14.32-32-31.98-32s-31.98 14.33-31.98 32v20.84C118.56 68.1 64.08 130.3 64.08 208c0 102.3-36.15 133.53-55.47 154.29-6 6.45-8.66 14.16-8.61 21.71.11 16.4 12.98 32 32.1 32h383.8c19.12 0 32-15.6 32.1-32 .05-7.55-2.61-15.27-8.61-21.71zM67.53 368c21.22-27.97 44.42-74.33 44.53-159.42 0-.2-.06-.38-.06-.58 0-61.86 50.14-112 112-112s112 50.14 112 112c0 .2-.06.38-.06.58.11 85.1 23.31 131.46 44.53 159.42H67.53zM224 512c35.32 0 63.97-28.65 63.97-64H160.03c0 35.35 28.65 64 63.97 64z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <div
            className="Avatar__TagContainer-sc-1vuf9om-2 hPvQeZ"
            id={null}
            onClick={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 iOVbHb Avatar__AvatarText-sc-1vuf9om-0 gPtIFR"
              fontSize="1rem"
              fontWeight={500}
              id={null}
              letterSpacing="0.5px"
            >
              LG
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="Flex__FlexWrapper-sc-7b3s7m-0 fcSrfy Layout__Body-sc-19tlhp4-3 iPUXIc"
    height={null}
    id={null}
    overflow={null}
    width={null}
  >
    <div
      className="Flex__FlexWrapper-sc-7b3s7m-0 dmnuqw Layout__RegionLeft-sc-19tlhp4-4 kLquVr"
      height={null}
      id="Left"
      overflow={null}
      width="10rem"
    >
      <ul
        className="List__ListWrapper-sc-43f2zq-0 jUoCfC"
        id={null}
      >
        <li
          className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
          disabled={false}
          href={null}
          id={null}
          onClick={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                fontSize="1rem"
                fontWeight={400}
                id={null}
                letterSpacing="0.5px"
              >
                &lt; Jobs
              </p>
            </div>
          </div>
        </li>
        <li
          className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
          disabled={false}
          href={null}
          id={null}
          onClick={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                fontSize="1rem"
                fontWeight={400}
                id={null}
                letterSpacing="0.5px"
              >
                Job Details
              </p>
            </div>
          </div>
        </li>
        <li
          className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
          disabled={false}
          href={null}
          id={null}
          onClick={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                fontSize="1rem"
                fontWeight={400}
                id={null}
                letterSpacing="0.5px"
              >
                Site Verification
              </p>
            </div>
          </div>
        </li>
        <li
          className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
          disabled={false}
          href={null}
          id={null}
          onClick={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                fontSize="1rem"
                fontWeight={400}
                id={null}
                letterSpacing="0.5px"
              >
                Data Checklist
              </p>
            </div>
          </div>
        </li>
        <li
          className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
          disabled={false}
          href={null}
          id={null}
          onClick={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                fontSize="1rem"
                fontWeight={400}
                id={null}
                letterSpacing="0.5px"
              >
                Schedule Visit
              </p>
            </div>
          </div>
        </li>
        <li
          className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
          disabled={false}
          href={null}
          id={null}
          onClick={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                fontSize="1rem"
                fontWeight={400}
                id={null}
                letterSpacing="0.5px"
              >
                Report
              </p>
            </div>
          </div>
        </li>
        <li
          className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
          disabled={false}
          href={null}
          id={null}
          onClick={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                fontSize="1rem"
                fontWeight={400}
                id={null}
                letterSpacing="0.5px"
              >
                ReviewSend
              </p>
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      className="Flex__FlexWrapper-sc-7b3s7m-0 dAojLi Layout__WrapperMain-sc-19tlhp4-5 hRxOjc"
      height="20rem"
      id={null}
      overflow={null}
      width="calc(calc(100% - 10rem) - 24rem)"
    >
      <div
        className="Flex__FlexWrapper-sc-7b3s7m-0 brOArO Layout__RegionCenter-sc-19tlhp4-6 jQKfmR"
        height={null}
        id="Main"
        overflow={null}
        width={null}
      >
        <div
          className="Panel__PanelWrapper-sc-48epke-0 bdKrFx"
          height="100%"
          id={null}
          width="100%"
        >
          <section
            className="Panel__SectionWrapper-sc-48epke-1 irgvti Panel__PanelSection-sc-48epke-2 BZwGc"
            id={null}
          >
            <div
              className="Bar__BarLayout-icfo76-2 eIFIfS"
              id="storyshots_142"
              onClick={null}
            >
              <div
                className="Bar__Slot-icfo76-1 fNcQEg"
              >
                <h5
                  className="Typography__TitleText-sc-19auepv-2 dTLbTf"
                  fontSize="1.15rem"
                  fontWeight="500"
                  letterSpacing="0.4px"
                >
                  Site Verification
                </h5>
              </div>
            </div>
          </section>
          <section
            className="Panel__SectionWrapper-sc-48epke-1 kMucXq"
            id={null}
          />
        </div>
      </div>
    </div>
    <div
      className="Flex__FlexWrapper-sc-7b3s7m-0 jYTfur Layout__RegionRight-sc-19tlhp4-8 fkttIO"
      height={null}
      id="Right"
      overflow={null}
      width="24rem"
    >
      <div
        className="Panel__PanelWrapper-sc-48epke-0 bdKrFx"
        height="100%"
        id={null}
        width="100%"
      >
        <section
          className="Panel__SectionWrapper-sc-48epke-1 irgvti Panel__PanelSection-sc-48epke-2 BZwGc"
          id={null}
        >
          <div
            className="Bar__BarLayout-icfo76-2 eIFIfS"
            id="storyshots_143"
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 bOQKbQ"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-angle-left fa-w-6 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
                color={null}
                data-icon="angle-left"
                data-prefix="far"
                focusable="false"
                fontSize="inherit"
                id={null}
                role="img"
                style={Object {}}
                viewBox="0 0 192 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4.2 247.5L151 99.5c4.7-4.7 12.3-4.7 17 0l19.8 19.8c4.7 4.7 4.7 12.3 0 17L69.3 256l118.5 119.7c4.7 4.7 4.7 12.3 0 17L168 412.5c-4.7 4.7-12.3 4.7-17 0L4.2 264.5c-4.7-4.7-4.7-12.3 0-17z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </div>
            <div
              className="Bar__Slot-icfo76-1 bOWYHS"
            >
              <h5
                className="Typography__TitleText-sc-19auepv-2 dTLbTf"
                fontSize="1.15rem"
                fontWeight="500"
                letterSpacing="0.4px"
              >
                Site A1A
              </h5>
            </div>
            <div
              className="Bar__Slot-icfo76-1 kZQbjh"
            >
              <div
                className="Popper__NonPortalWrapper-sc-1t9125t-1 ifvjkR"
                id="menu-popper-storyshots_143-Menu"
              >
                <button
                  className="Button__StyledButton-sc-1v7sls2-0 hCtQDx"
                  disabled={false}
                  htmlFor={null}
                  id="menu-icon-storyshots_143-Menu"
                  name="menu-icon-storyshots_143-Menu"
                  onClick={[Function]}
                  tabIndex="1"
                  type="button"
                >
                  <section
                    className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 jPrDKg"
                    id={null}
                    rows={null}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-ellipsis-v fa-w-4 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
                      color={null}
                      data-icon="ellipsis-v"
                      data-prefix="far"
                      focusable="false"
                      fontSize="inherit"
                      id={null}
                      role="img"
                      style={Object {}}
                      viewBox="0 0 128 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M64 208c26.5 0 48 21.5 48 48s-21.5 48-48 48-48-21.5-48-48 21.5-48 48-48zM16 104c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48zm0 304c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </section>
                </button>
              </div>
            </div>
          </div>
        </section>
        <section
          className="Panel__SectionWrapper-sc-48epke-1 irgvti"
          id={null}
        >
          <div
            className="Legend__Wrapper-sc-70hm4b-1 dZpfgu"
            id="storyshots_144"
          >
            <table
              className="Legend__TableContainer-sc-70hm4b-2 bECvSG"
              id="storyshots_144-table"
            >
              <tbody
                className="Legend__Body-sc-70hm4b-5 kHKUyy"
              >
                <tr
                  className="Legend__Row-sc-70hm4b-4 kNHlAf"
                >
                  <td
                    className="Legend__Cell-sc-70hm4b-3 NrCgM"
                    fontSize={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      LightBox ID
                    </p>
                  </td>
                  <td
                    className="Legend__Cell-sc-70hm4b-3 NrCgM"
                    fontSize={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      1212123232
                    </p>
                  </td>
                </tr>
                <tr
                  className="Legend__Row-sc-70hm4b-4 kNHlAf"
                >
                  <td
                    className="Legend__Cell-sc-70hm4b-3 NrCgM"
                    fontSize={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      Latitude
                    </p>
                  </td>
                  <td
                    className="Legend__Cell-sc-70hm4b-3 NrCgM"
                    fontSize={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      40.34234
                    </p>
                  </td>
                </tr>
                <tr
                  className="Legend__Row-sc-70hm4b-4 kNHlAf"
                >
                  <td
                    className="Legend__Cell-sc-70hm4b-3 NrCgM"
                    fontSize={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      Longitude
                    </p>
                  </td>
                  <td
                    className="Legend__Cell-sc-70hm4b-3 NrCgM"
                    fontSize={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      -73.432432
                    </p>
                  </td>
                </tr>
                <tr
                  className="Legend__Row-sc-70hm4b-4 kNHlAf"
                >
                  <td
                    className="Legend__Cell-sc-70hm4b-3 NrCgM"
                    fontSize={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      Assessor Parcel Reconciliation
                    </p>
                  </td>
                  <td
                    className="Legend__Cell-sc-70hm4b-3 NrCgM"
                    fontSize={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      Owner Check
                    </p>
                  </td>
                </tr>
                <tr
                  className="Legend__Row-sc-70hm4b-4 kNHlAf"
                >
                  <td
                    className="Legend__Cell-sc-70hm4b-3 NrCgM"
                    fontSize={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      Address
                    </p>
                  </td>
                  <td
                    className="Legend__Cell-sc-70hm4b-3 NrCgM"
                    fontSize={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      477 Madison Avenue
                    </p>
                  </td>
                </tr>
                <tr
                  className="Legend__Row-sc-70hm4b-4 kNHlAf"
                >
                  <td
                    className="Legend__Cell-sc-70hm4b-3 NrCgM"
                    fontSize={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      City
                    </p>
                  </td>
                  <td
                    className="Legend__Cell-sc-70hm4b-3 NrCgM"
                    fontSize={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      New York
                    </p>
                  </td>
                </tr>
                <tr
                  className="Legend__Row-sc-70hm4b-4 kNHlAf"
                >
                  <td
                    className="Legend__Cell-sc-70hm4b-3 NrCgM"
                    fontSize={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      State
                    </p>
                  </td>
                  <td
                    className="Legend__Cell-sc-70hm4b-3 NrCgM"
                    fontSize={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      New York
                    </p>
                  </td>
                </tr>
                <tr
                  className="Legend__Row-sc-70hm4b-4 kNHlAf"
                >
                  <td
                    className="Legend__Cell-sc-70hm4b-3 NrCgM"
                    fontSize={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      Zip
                    </p>
                  </td>
                  <td
                    className="Legend__Cell-sc-70hm4b-3 NrCgM"
                    fontSize={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      10222
                    </p>
                  </td>
                </tr>
                <tr
                  className="Legend__Row-sc-70hm4b-4 kNHlAf"
                >
                  <td
                    className="Legend__Cell-sc-70hm4b-3 NrCgM"
                    fontSize={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      Census Tract
                    </p>
                  </td>
                  <td
                    className="Legend__Cell-sc-70hm4b-3 NrCgM"
                    fontSize={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      10200
                    </p>
                  </td>
                </tr>
                <tr
                  className="Legend__Row-sc-70hm4b-4 kNHlAf"
                >
                  <td
                    className="Legend__Cell-sc-70hm4b-3 NrCgM"
                    fontSize={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      Census Block
                    </p>
                  </td>
                  <td
                    className="Legend__Cell-sc-70hm4b-3 NrCgM"
                    fontSize={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      N/A
                    </p>
                  </td>
                </tr>
                <tr
                  className="Legend__Row-sc-70hm4b-4 kNHlAf"
                >
                  <td
                    className="Legend__Cell-sc-70hm4b-3 NrCgM"
                    fontSize={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      County
                    </p>
                  </td>
                  <td
                    className="Legend__Cell-sc-70hm4b-3 NrCgM"
                    fontSize={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      New York
                    </p>
                  </td>
                </tr>
                <tr
                  className="Legend__Row-sc-70hm4b-4 kNHlAf"
                >
                  <td
                    className="Legend__Cell-sc-70hm4b-3 NrCgM"
                    fontSize={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      CBSA
                    </p>
                  </td>
                  <td
                    className="Legend__Cell-sc-70hm4b-3 NrCgM"
                    fontSize={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      New York-Newark-New Jersey
                    </p>
                  </td>
                </tr>
                <tr
                  className="Legend__Row-sc-70hm4b-4 kNHlAf"
                >
                  <td
                    className="Legend__Cell-sc-70hm4b-3 NrCgM"
                    fontSize={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      Market
                    </p>
                  </td>
                  <td
                    className="Legend__Cell-sc-70hm4b-3 NrCgM"
                    fontSize={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      New York
                    </p>
                  </td>
                </tr>
                <tr
                  className="Legend__Row-sc-70hm4b-4 kNHlAf"
                >
                  <td
                    className="Legend__Cell-sc-70hm4b-3 NrCgM"
                    fontSize={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      Submarket
                    </p>
                  </td>
                  <td
                    className="Legend__Cell-sc-70hm4b-3 NrCgM"
                    fontSize={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      Midtown East
                    </p>
                  </td>
                </tr>
                <tr
                  className="Legend__Row-sc-70hm4b-4 kNHlAf"
                >
                  <td
                    className="Legend__Cell-sc-70hm4b-3 NrCgM"
                    fontSize={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      Opportunity Zone
                    </p>
                  </td>
                  <td
                    className="Legend__Cell-sc-70hm4b-3 NrCgM"
                    fontSize={null}
                  >
                    <p
                      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
                      fontSize="1rem"
                      fontWeight={400}
                      id={null}
                      letterSpacing="0.5px"
                    >
                      Yes
                    </p>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;
